Update dragend search request, swiper fixes, updates for properties list on result page, testimonials style fixes (#968)
* fixes for properties list on properties page after migrate to ES v3

* centered slides for cut off it on both sides
https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/869

* remove lazy preloader and alt text for gallery images on property card
https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/869

* testimonials style fixes for short review

* update dragend search request
https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/882

--- a/wp-content/themes/wp-property-pro/style.css
+++ b/wp-content/themes/wp-property-pro/style.css
@@ -911,6 +911,13 @@ ol.gallery-slider li.thumb-small:last-child { margin-bottom: 0; }
 .search-modal form i{
     margin-top: -15px;
 }
+
+/* testimonials */
+.sliderContent .slides > li {
+    width: 100%;
+    min-height: 235px;
+}
+
 /* spinner */
 
 .spinner {
